--- a/package.json
+++ b/package.json
@@ -4,4 +4,13 @@
   "creator": {
     "version": "3.8.7"
   }
+  ,
+  "devDependencies": {
+    "husky": "^8.0.0",
+    "@commitlint/cli": "^17.0.0",
+    "@commitlint/config-conventional": "^17.0.0"
+  },
+  "scripts": {
+    "prepare": "husky install"
+  }
 }
